Fix child filters having no gap in plugin filter view

--- a/src/app/components-small/plugin-filter-view/plugin-filter-view.component.sass
+++ b/src/app/components-small/plugin-filter-view/plugin-filter-view.component.sass
@@ -13,6 +13,11 @@
         width: 0px
         border-inline-start: 1px solid var(--text-washed)
 
+.child-filters
+    display: flex
+    flex-direction: column
+    gap: 0.5rem
+
 .single-filter-container
     display: flex
     gap: 0.5rem
